# python-backend

./: .gitignore  README.md  SAYAN_DATABASE_FINAL.sql  ai_assistant_database_updates.sql  alembic.ini  apply_migration.py  encryption.key  encryption.keyinfo  env.example  error  error.json  migration_add_profile_images.sql  project_structure.md  pyproject.toml  requirements.txt  test_video.html  update_auth_schemas.py
alembic/: env.py
app/: deps.py  main.py
app/alembic/versions/: 20240716_add_is_ai_generated_to_questions.py
app/api/v1/: academy.py  academy_profile.py  academy_simplified.py  ai_assistant.py  ai_endpoints.py  ai_test.py  auth.py  blogs.py  cart.py  categories.py  courses.py  dbsayan_final.sql  debug.py  digital_products.py  exams.py  interactive_tools.py  lessons.py  me.py  payment.py  students.py  video_test.py  videos.py  videos_direct.py  wallet.py
app/api/v1/auth/: __init__.py  auth_basic.py  auth_otp.py  auth_password.py  auth_production_fix.py  auth_profile.py  auth_test.py  auth_utils.py  google_test.py  registration_service.py  registration_service_backup.py  registration_service_fixed.py
app/api/v1/courses/: __init__.py  chapters.py  chapters_improved.py  courses.py  enrollment.py  main.py  progression.py  public.py
app/core/: ai_config.py  ai_config_updated.py  config.py  encryption_config.py  ffmpeg_config.py  hls_config.py  response_handler.py  response_utils.py  security.py
app/crud/: README.md  __init__.py  about.py  academy_content.py  base.py  faq.py  opinion.py  settings.py  slider.py  student.py  template.py
app/db/: __init__.py  base.py  session.py
app/docs/: academy_profile_endpoints.md  fonts_guide.md
app/models/: __init__.py  academy.py  admin.py  ai_answer.py  ai_assistant.py  ai_models.py  blacklisted_token.py  cart.py  chapter.py  course.py  exam.py  finance.py  general.py  interactive_tool.py  lesson.py  lesson_progress.py  marketing.py  otp.py  payment.py  product.py  role.py  settings.py  student.py  student_course.py  student_product.py  template.py  user.py  video.py
app/schemas/: __init__.py  about.py  academy_profile.py  auth.py  authentication.py  base.py  blogs.py  cart.py  chapter.py  course.py  courses.py  faq.py  google.py  lesson.py  opinion.py  otp.py  password.py  product.py  settings.py  slider.py  template.py  user.py
app/services/: ai_service.py  auth_service.py  cart_service.py  email_service.py  file_service.py  google_auth_service.py  hls_streaming.py  lesson_access_service.py  moyasar_service.py  otp_service.py  payment_service.py  text_quality_service.py  video_processing.py  video_streaming.py
app/services/ai/: openai_service.py  rate_limit_handler.py
app/static/css/: video-protection.css
app/static/js/: video-protection.js
app/tests/: __init__.py  conftest.py  conftest_simple.py  test_auth.py  test_simple.py
app/tests/models/: test_course.py  test_lesson.py
app/tests/schemas/: __init__.py  test_course_schemas.py
app/tests/services/: test_video_streaming.py
postman/: Interactive_Tools_API.postman_collection.json
