[tool.poetry]
name = "fastapi-backend"
version = "0.1.0"
description = "FastAPI Backend Application"
authors = ["SAYAN"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.115.0"
uvicorn = {extras = ["standard"], version = "0.32.1"}
sqlalchemy = "2.0.36"
pydantic = "2.10.2"
pydantic-settings = "2.6.1"
alembic = "1.14.0"
python-jose = {extras = ["cryptography"], version = "3.3.0"}
passlib = {extras = ["bcrypt"], version = "1.7.4"}
python-multipart = "0.0.6"
pymysql = "^1.1.0"
cryptography = "^41.0.0"
python-decouple = "3.8"
aiofiles = "24.1.0"
email-validator = "^2.0.0"
pillow = "^10.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.4"
httpx = "0.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "uvicorn app.main:app --reload" 