[tool.poetry]
name = "fastapi-backend"
version = "0.1.0"
description = "Unified Authentication System - FastAPI Backend"
authors = ["SAYAN"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.115.0"
uvicorn = {extras = ["standard"], version = "0.32.1"}
sqlalchemy = "2.0.36"
pydantic = "2.10.2"
pydantic-settings = "2.6.1"
alembic = "1.14.0"
python-jose = {extras = ["cryptography"], version = "3.3.0"}
passlib = {extras = ["bcrypt"], version = "1.7.4"}
python-multipart = "0.0.6"
pymysql = "^1.1.0"
cryptography = "^41.0.0"
python-decouple = "3.8"
aiofiles = "24.1.0"
email-validator = "^2.0.0"
pillow = "^10.4.0"
# Google authentication dependencies
google-auth = "^2.23.0"
google-auth-oauthlib = "^1.1.0"
google-auth-httplib2 = "^0.1.0"
# HTTP requests for API calls
requests = "^2.31.0"
# Timezone handling
pytz = "^2024.1"
# Date utilities
python-dateutil = "^2.9.0"
# JWT handling
pyjwt = "^2.8.0"
bcrypt = "<4.0.0"
pydub = "^0.25.1"
openai = "^1.97.0"
ffmpeg-python = "^0.2.0"
m3u8 = "^6.0.0"
python-ffmpeg = "^2.0.12"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.4"
httpx = "0.28.0"
# Development and testing tools
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "uvicorn app.main:app --reload" 
dev = "uvicorn app.main:app --reload --host 0.0.0.0 --port 8000"
migrate = "python apply_migration.py"

# Black configuration for code formatting
[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort configuration for import sorting
[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["app/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
] 